(kometa) update trakt token

--- a/cluster/apps/media/plex-meta-manager/config/pmm-secret.sops.yaml
+++ b/cluster/apps/media/plex-meta-manager/config/pmm-secret.sops.yaml
@@ -8,15 +8,15 @@ metadata:
         reflector.v1.k8s.emberstack.com/reflection-auto-enabled: "true"
         reflector.v1.k8s.emberstack.com/reflection-auto-namespaces: media
 stringData:
-    PLEX_TOKEN: ENC[AES256_GCM,data:5Kv2pgjrfU8OMktrAqLTPQVu7CE=,iv:ci/SeT6muEfTXIF08Kj0aqnhxKashbZBZm4kAUxaDrc=,tag:kbb+4lmbpPMPnRlySqXntQ==,type:str]
-    MDBLIST_API_KEY: ENC[AES256_GCM,data:4QNsnJ+1r99RsGKU1Jy+1/tHS8Y/7Ebkdg==,iv:9gY+vR8WIQOm+3OasiA5ecnv2o77mzR3j0045mN0PD8=,tag:XmYwn55oyF3h+08sbzSTRQ==,type:str]
-    OMDB_API_KEY: ENC[AES256_GCM,data:76nS86Q+jSQ=,iv:v2O826AOXt3oBniN2KCJbncTyFPuHMYRXZky2kLprhY=,tag:7l8hNfU2DE4g8R2NPv3+eQ==,type:str]
-    TMDB_API_KEY: ENC[AES256_GCM,data:jm4SIzNQxNVixJxfi4IOSIj0497g80xURtWTSMNafWk=,iv:ml0v3vJsJWyQBYLN30IR5sQMiCyd2UIuyiJBLMfG9NQ=,tag:BHc6k4xj2XJqt6wihOG4bg==,type:str]
-    TRAKT_CLIENT_ID: ENC[AES256_GCM,data:gQz+GmpIhaPbCbSv+0nNS1Cf/rAp6gfoXxYpai6hjrD676qQHtAN6DJ6nOJ2Cs1U2mSLfXn8W6kMB7yvcKcnwQ==,iv:nFi6XpgN5LGLw0EllUCFKt60xJQmIxF6Ex8BxjrqTzQ=,tag:LX4t3DOjuLMCoVMmYqYWCw==,type:str]
-    TRAKT_CLIENT_SECRET: ENC[AES256_GCM,data:4HcNUIVg9YPUx8RIKSCRSwtzg29SYWFcEMLB9gj3PqR8D8UOObEaI/uF/f5HSoC33LluwoTpZ+NI8eqDwOF5YQ==,iv:vqhi/47jUEHjMS+ItJBGqT4q+4tAmA10/uwvCeFTRB8=,tag:vBHwNOyV6XIt72Q0H/GBmg==,type:str]
-    TRAKT_ACCESS_TOKEN: ENC[AES256_GCM,data:5ZxUbjvS+Iet66x8olWSupbaErAwJqTDyLCOUMGIfnWwNQCgT4XtQNFJ2HXTgUvLDNOEJJ6G0fPL/3BQcVyaoQ==,iv:iH/S6bbVSx9PfVWkupt5LRIWzjG/JPu7gpWTDpLnwB8=,tag:nE33YxFBDhMYlV+4ag0b1Q==,type:str]
-    TRAKT_EXPIRES_IN: ENC[AES256_GCM,data:y18VWwf6KA==,iv:HCNRCTxrhifGn6Z3Kz/8+7QS2xQj2BY6g5Ztxqk3LxA=,tag:ab8FBBFe2O8s+Q+y8iKKJQ==,type:str]
-    TRAKT_REFRESH_TOKEN: ENC[AES256_GCM,data:GfSA2uQdb8sAENZL6QfNhG22V7tkzeUywmSpJSgV9nCcua3kf07ZXEvE5s9B4/22WiGiFHo10RhaYoc5DEUnqA==,iv:5G9R+uYBUhNoZpIBV126vrZ8zPMoNxKcTqinjvGWAAE=,tag:j8VtFJszn7Bj7cpEOghuWQ==,type:str]
+    PLEX_TOKEN: ENC[AES256_GCM,data:s+pA6AEf2uHHIAVsKInxds4JcqU=,iv:WVlhhON56S8CjKmpyjzT14+ubW8j7aBQb4DxKjcFgIw=,tag:mfVF4Iu4FJY75WRxCTQcGg==,type:str]
+    MDBLIST_API_KEY: ENC[AES256_GCM,data:kr67SMnu3Dpksl7S0EWJCN7hjkngLahGJw==,iv:p3DViQtRECBwa094bO3miDGhh26vZ4CwCQfXAxxQN+8=,tag:uOR3kD5PZvxyqw8LGmxLPg==,type:str]
+    OMDB_API_KEY: ENC[AES256_GCM,data:A2ySRvQbaYI=,iv:cYX9KYQh45pCJToOAPGRWj32Zg7tnFrAXXUFpuunCuc=,tag:vB3YVc5aoWD0BQoFJFmTSg==,type:str]
+    TMDB_API_KEY: ENC[AES256_GCM,data:/NskEvq07qGIiB9U0KLjSRFiEfSMzzE5wpxZuzGiIeU=,iv:7xNKI5kkY3S5A+6NtnVhs7A0nTf+0rvCYkpH1MluLBE=,tag:5vNkCzqYz5HRNEH/+QYTpw==,type:str]
+    TRAKT_CLIENT_ID: ENC[AES256_GCM,data:Tew1NkYjCl7VYbVnLGIH9YxH1eyakEY2VQDYgMXO/llN7UuPXrdJKt0Bb6SKXVceAgXHUbnlGXnxbHVv2zfkiA==,iv:I2+4dRtzv1ddg4WrOKA1jCoxmkPb0tFavUswJEPPtfQ=,tag:ROIdvtV2sDc4JqTnQMHTRA==,type:str]
+    TRAKT_CLIENT_SECRET: ENC[AES256_GCM,data:dDEDWi/PlaPubtfi//64NXXmnpx6VnhAWHK/sJUdKa/bcWz1sWZRSZGuy8ayoiOjc2DZfQYbWq/iA+OfhwjJ6A==,iv:zSMY0pY/nQ9SWuCEGlstGBUwrSQKFuKs26hbw3tHYqY=,tag:zqIzPrb/agpCDDIjMLr2WA==,type:str]
+    TRAKT_ACCESS_TOKEN: ENC[AES256_GCM,data:GS3e+6tJayw98KAuUDLY3X/wa8QrGD+K9UopfIenu3vp1qbWEbE+TFCdH5Ueww6JJPwYF8Ry/zBpKpeeqP7ECw==,iv:/bf1ZsGpQnWIX9eZ8jMP1AXSVi0fvMLSrW7o8kUn6ng=,tag:6ULYiDH/WaqJVYLLRyvGlQ==,type:str]
+    TRAKT_EXPIRES_IN: ENC[AES256_GCM,data:x6ydBm1d,iv:J70nx24Jrk1jFj3pYxAspojbbcmHeO3ci1dcLmv7mzw=,tag:YU/sdaOLqIFI8S7goEfVSA==,type:str]
+    TRAKT_REFRESH_TOKEN: ENC[AES256_GCM,data:rq+jv0ZeQfU7u8Qdfj8hAh4JGtb+QkSkdyb//ggYx6fIBKL5q8V2cjadd69XCxwPSc2BilptbOJXM8cbo0jcEA==,iv:GptaFcWoMTsVtTXtmJFl23AXiWMy2RyXu+X/GtEG+tU=,tag:h/of0FBGWbULRzkAYYbBpQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -26,23 +26,23 @@ sops:
         - recipient: age1hr5v66mq2rtflw8vrzmdlaku48v0j5l2wr58lrdmxqp5decczugs3rr6yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBxZkd1UXdnVmtwUEJQa093
-            VXY2c0tYcXNvV2NkRDZEdHFkWEVZcDZjbTBZCnRPd1NldndqQ0V0bjZTL0FsOVBl
-            ekJ0bXdiUGhkK0xobGxCMVh4R2YzeGsKLS0tIFlkZmFGaWl4U1VheXlQRVZZNEE4
-            a3poY0t0c3FCQndOZGZyRkNqbG5pOU0KoHwhhEXwYR5XeWC4z6DRX/FV9iUj8xSS
-            vt365/+B+jfElWle6j4RW98PgQXweHXOwN+5z+9x+l2H0kUgDJE7CA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBLcW9KeFdTejg4MmlwMUpS
+            eHpRd245YXFQSnBnUWtXOHovejJlUXQrZG04CjVwcS8yeFZkUVg2c0IyQ1RjNDQ0
+            cWUyeGxpN2I1Vm1kVW5zTFpyWUo3ZW8KLS0tIG1LSU4rTEZSemN6V1Qvc3FOYkxQ
+            V3BMUS9OZUZ3Unk2d1pkZTBsaUZyenMKUNZR/chvVncAQxiZrJE1Kvh/fjHJuyVP
+            4AKQvGJHqcQHfv3jsXXp6GeHCZ5mm3z67B3sK6NIvK1X4i0hjlDgCg==
             -----END AGE ENCRYPTED FILE-----
         - recipient: age1rp9r7wvsgy6zcl3j4v7kvnrv29sawvqhlm759j9x6zvs0f9ry4kqtmajrq
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBFQzBZV2gxYnE4dFVGWXp3
-            Rm5iTXdheEQ1TXdLL01FaUo2MjRBdWtFejBrCkNLSTNoOXR5SHZ2YnVwTVFWdXdn
-            d0NWandSN2pUaEwydDN2enhYTmFpNWcKLS0tIHZpUjdwL2dnVFhEQkd1QlIycUtI
-            L3krZHlpbERORUE5ZGRmZzBRKzBubWsKWv/T6sJACVHoEIw/2N7+8asjWL8ZS3wQ
-            IDa0FfdYmFyCJj4LTudShAQJNc9ZxEmnrLHoGqcNEAAtKN1zUgzWZQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB4VUwzOU9ZSkZSUE1zVGM2
+            aVpJbUM4UDFadThMTlZZTlViNElYbjN1VldjCnpGcExJQnRsNnVJUUVhTWVRSnFC
+            M3JZWGxGS0FLU3JFR0c3dG5NMzJpRm8KLS0tIHR6OXdVaWRUR3QzbUhWYkJGeVc3
+            azlzUmxtRWM4MHo4bE50cFFUS1g5MkkKeBiO/FdnJ3NhuWI50b0Fj1wuG0dP3+F9
+            Bo5In67a23/Fm1skULYAJ2MuBQKkHtumNgfRFUzIRFXoKC32AdFEmA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-05-18T17:26:01Z"
-    mac: ENC[AES256_GCM,data:KWcC2zY3K6SDCPWjGwfU+HzGsBH+AqDT4PwIJoIVA4i45difVE4LOSNGVcPRFmPxfXGcJuptuaFqngpyhU0VK6RU8ezzE/cLLtKu6E4t+zbKFjwnklDrjm7agBHWN6cAVGgAgfZ4Fy0NyrAYpPZnnFKt7TnDZvpn7LLIVSQa8xo=,iv:WuwEPqEREm3d6NGAvzh1Xl/yQ4884asrlVwG6km2BiY=,tag:GSxyjNoRRqpQvUIVH/CP8Q==,type:str]
+    lastmodified: "2025-11-11T17:06:06Z"
+    mac: ENC[AES256_GCM,data:2A9SFcng+S2hIBUg9xRQc1z98JQMsP3NxkRV4CgSCpyVZvaXxvKnoWuSfa7hwcvgKU0T+9eZUaG/npAGmyWiA1awmVH8gV3AHMQx9+eBhUvP8kDMFdfoFXY0G3qHeDx9VMLPIvf6ksHt641FAVoYKG5q8cmGuus3ecuLKG9hgVs=,iv:gC8YXgisczEVwIgncRUpAYo9ZXywCrgj5cYr8eFv9xo=,tag:jCbxgq3leD0q4yNPORacLQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
