--- a/cluster/apps/media/plex-meta-manager/config/pmm-secret.sops.yaml
+++ b/cluster/apps/media/plex-meta-manager/config/pmm-secret.sops.yaml
@@ -8,15 +8,16 @@ metadata:
         reflector.v1.k8s.emberstack.com/reflection-auto-enabled: "true"
         reflector.v1.k8s.emberstack.com/reflection-auto-namespaces: media
 stringData:
-    PLEX_TOKEN: ENC[AES256_GCM,data:s+pA6AEf2uHHIAVsKInxds4JcqU=,iv:WVlhhON56S8CjKmpyjzT14+ubW8j7aBQb4DxKjcFgIw=,tag:mfVF4Iu4FJY75WRxCTQcGg==,type:str]
-    MDBLIST_API_KEY: ENC[AES256_GCM,data:kr67SMnu3Dpksl7S0EWJCN7hjkngLahGJw==,iv:p3DViQtRECBwa094bO3miDGhh26vZ4CwCQfXAxxQN+8=,tag:uOR3kD5PZvxyqw8LGmxLPg==,type:str]
-    OMDB_API_KEY: ENC[AES256_GCM,data:A2ySRvQbaYI=,iv:cYX9KYQh45pCJToOAPGRWj32Zg7tnFrAXXUFpuunCuc=,tag:vB3YVc5aoWD0BQoFJFmTSg==,type:str]
-    TMDB_API_KEY: ENC[AES256_GCM,data:/NskEvq07qGIiB9U0KLjSRFiEfSMzzE5wpxZuzGiIeU=,iv:7xNKI5kkY3S5A+6NtnVhs7A0nTf+0rvCYkpH1MluLBE=,tag:5vNkCzqYz5HRNEH/+QYTpw==,type:str]
-    TRAKT_CLIENT_ID: ENC[AES256_GCM,data:Tew1NkYjCl7VYbVnLGIH9YxH1eyakEY2VQDYgMXO/llN7UuPXrdJKt0Bb6SKXVceAgXHUbnlGXnxbHVv2zfkiA==,iv:I2+4dRtzv1ddg4WrOKA1jCoxmkPb0tFavUswJEPPtfQ=,tag:ROIdvtV2sDc4JqTnQMHTRA==,type:str]
-    TRAKT_CLIENT_SECRET: ENC[AES256_GCM,data:dDEDWi/PlaPubtfi//64NXXmnpx6VnhAWHK/sJUdKa/bcWz1sWZRSZGuy8ayoiOjc2DZfQYbWq/iA+OfhwjJ6A==,iv:zSMY0pY/nQ9SWuCEGlstGBUwrSQKFuKs26hbw3tHYqY=,tag:zqIzPrb/agpCDDIjMLr2WA==,type:str]
-    TRAKT_ACCESS_TOKEN: ENC[AES256_GCM,data:GS3e+6tJayw98KAuUDLY3X/wa8QrGD+K9UopfIenu3vp1qbWEbE+TFCdH5Ueww6JJPwYF8Ry/zBpKpeeqP7ECw==,iv:/bf1ZsGpQnWIX9eZ8jMP1AXSVi0fvMLSrW7o8kUn6ng=,tag:6ULYiDH/WaqJVYLLRyvGlQ==,type:str]
-    TRAKT_EXPIRES_IN: ENC[AES256_GCM,data:x6ydBm1d,iv:J70nx24Jrk1jFj3pYxAspojbbcmHeO3ci1dcLmv7mzw=,tag:YU/sdaOLqIFI8S7goEfVSA==,type:str]
-    TRAKT_REFRESH_TOKEN: ENC[AES256_GCM,data:rq+jv0ZeQfU7u8Qdfj8hAh4JGtb+QkSkdyb//ggYx6fIBKL5q8V2cjadd69XCxwPSc2BilptbOJXM8cbo0jcEA==,iv:GptaFcWoMTsVtTXtmJFl23AXiWMy2RyXu+X/GtEG+tU=,tag:h/of0FBGWbULRzkAYYbBpQ==,type:str]
+    PLEX_TOKEN: ENC[AES256_GCM,data:H1IZy5L47N0Xw4rDnWTuIEvyPnE=,iv:8ejbzov49DvkOQYnj9qg+uxDOvpScS91ldVCi96HmdY=,tag:qjpYIEyRgcBRyF3aiYllWw==,type:str]
+    MDBLIST_API_KEY: ENC[AES256_GCM,data:TPTniIJnxONNJT0HELwUvckk0/J1dilvBQ==,iv:oKPYNcPsGkphZbgPJt/7eEaHqbXcExaRC/S6taGYA4Y=,tag:bSA0VZ8xl66HnGflcML6xA==,type:str]
+    OMDB_API_KEY: ENC[AES256_GCM,data:QCJmiJlXSaQ=,iv:8roARS1GRQGcM52EoDh2MGWrBPKEH14gRUGgBJm4UNM=,tag:ZvaaUlI/pktvazc1hyRPEA==,type:str]
+    TMDB_API_KEY: ENC[AES256_GCM,data:x4adwoULtDOb1Vb5nfoRlL5gACCgrtzwlbcbcwQqyOQ=,iv:A7HaqfPH2oth3mbsPD/g4KAPrvMasOT+cBbJZJpO2ss=,tag:4WpdYiKNSYzKACGwdf7NvA==,type:str]
+    TRAKT_CLIENT_ID: ENC[AES256_GCM,data:p8PpM/aM0t8isC+2DUSjW6yzpcKvsVJ4HQtrb8b2pRkSUn9zSCEAokOik3OM4bEtWTvRmAUaNsA2u6fdz01NJw==,iv:KxBbgEmBenfLGhbBuSIinqaldhxdrXaJ3QMunOo7wtU=,tag:wRaraf1dpL3Y9rmtf0R2tA==,type:str]
+    TRAKT_CLIENT_SECRET: ENC[AES256_GCM,data:apyw+kwJa/yrVv3QMNB43NtcsvzQqMuQWxhAx7OVgDFH3ABiJLXdvh2YDfzKQh9vivGCml3PtAhIJ7hebIULlg==,iv:mIDbmkzHhmdorFRAPWjTrZXtuPLKMeYd5FA9AOWnBmw=,tag:V9ESEiSShRsg+fKUJB4XXA==,type:str]
+    TRAKT_ACCESS_TOKEN: ENC[AES256_GCM,data:AVCKvzXqf9Lc3rOVSKQSZr78rnYBnDXq0QCMHG68rKE+DGCiK2g4sFD7eCtXjoFHVWRoDdsPBK8GEfih4Omt6A==,iv:tJdUKYRYHp8j/3qYbbZWpQQ3NEPVmlILM98VklFJxOw=,tag:sB7urGwCwKfjO4KNiPkr4Q==,type:str]
+    TRAKT_EXPIRES_IN: ENC[AES256_GCM,data:EDF4stTC,iv:9eBPiVjBkW1rthTrHM2kI8AQwrbrNpcBDuLQJG/fEIE=,tag:6e8xz1xY4Gpde1LG2GRq8A==,type:str]
+    TRAKT_REFRESH_TOKEN: ENC[AES256_GCM,data:ClbboV96u2vnW/BhFHTGg2WvCqpBn+hTEPL/Eeg6sUcre5kxrww0E0YWUEpF7q4bkmQSiDfD0c78TrptWaDwNA==,iv:msAH7Ac+iCR4VJMu55hA+o/5DMqrJ9bBuoIc3zrna0w=,tag:YvWxtr6u+HAgr9SvrmFecw==,type:str]
+    DISCORD_WEBHOOK_URL: ENC[AES256_GCM,data:OAIOL0M3Dbuo1HIIxViBOgv+eqLirHBMuH2NH5l+AIcKP5NKhBKWzQyjiLff3Urz7rbXz3pV/ZA+Lzr+Dandh+QspaehL64DT7jFggaA3NiJq/s3lO2BL0tBqOotMkkjILZcd/n2wEWM9NzI0q6ZPUU3kPuyfGWO,iv:L4cTvS+O1FW97WHWgMKbT18Ql7xYqPH4JvLG6GUPJCo=,tag:CIvnyAeIBi1kXbnihb513A==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -26,23 +27,23 @@ sops:
         - recipient: age1hr5v66mq2rtflw8vrzmdlaku48v0j5l2wr58lrdmxqp5decczugs3rr6yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBLcW9KeFdTejg4MmlwMUpS
-            eHpRd245YXFQSnBnUWtXOHovejJlUXQrZG04CjVwcS8yeFZkUVg2c0IyQ1RjNDQ0
-            cWUyeGxpN2I1Vm1kVW5zTFpyWUo3ZW8KLS0tIG1LSU4rTEZSemN6V1Qvc3FOYkxQ
-            V3BMUS9OZUZ3Unk2d1pkZTBsaUZyenMKUNZR/chvVncAQxiZrJE1Kvh/fjHJuyVP
-            4AKQvGJHqcQHfv3jsXXp6GeHCZ5mm3z67B3sK6NIvK1X4i0hjlDgCg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBDa1dXeWpNVm5zU3hzYnNY
+            R3ZnWFFJcjRVVmE2ZndKY3hZSlN0dUxaZkdZClpPZldUU2ZhdzEwK09JdlJQcFRu
+            QlpPNUgxSHRDQUhKQlgwSGdrMGNtUkkKLS0tIDVrWi9DSXJrSklEV0RjQTRLNGIv
+            ejJsRm8rbWFpdEMwYmh1N2tnSHIzaEUKBmwaMrZkYqkZuxwTX56rnC6uJj/bjJjk
+            NRH7k/JnPLEOf9QbDDHrfHMjWjhI2xAXpKaqc201gflH/KWUO03Mwg==
             -----END AGE ENCRYPTED FILE-----
         - recipient: age1rp9r7wvsgy6zcl3j4v7kvnrv29sawvqhlm759j9x6zvs0f9ry4kqtmajrq
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB4VUwzOU9ZSkZSUE1zVGM2
-            aVpJbUM4UDFadThMTlZZTlViNElYbjN1VldjCnpGcExJQnRsNnVJUUVhTWVRSnFC
-            M3JZWGxGS0FLU3JFR0c3dG5NMzJpRm8KLS0tIHR6OXdVaWRUR3QzbUhWYkJGeVc3
-            azlzUmxtRWM4MHo4bE50cFFUS1g5MkkKeBiO/FdnJ3NhuWI50b0Fj1wuG0dP3+F9
-            Bo5In67a23/Fm1skULYAJ2MuBQKkHtumNgfRFUzIRFXoKC32AdFEmA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAwUmlRdVJSTkpOY0ZLVnFj
+            VUpYNHlES1lTeE9uYm5tMDNqd2dtWG1OMHprCkxROXIvQ1hsRmFmUjIySnBCRU9D
+            Smh3UnF3VlpZb3d1MVdodGJqZ3JGSFUKLS0tIHVtYjYraHFVOEFQR3RwUW1VeDlr
+            QUFFbEwxcFQvVlZPVzBHbEZ6cEwzVjQKqN3i4EunV+XbLhrmVwO0sGpAHHxvA1Lm
+            hyQDH5Hzko02LXa/LUZ3Z8ZdsWuwxkj4FHJ47oIzeZJistCbqjSacQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-11-11T17:06:06Z"
-    mac: ENC[AES256_GCM,data:2A9SFcng+S2hIBUg9xRQc1z98JQMsP3NxkRV4CgSCpyVZvaXxvKnoWuSfa7hwcvgKU0T+9eZUaG/npAGmyWiA1awmVH8gV3AHMQx9+eBhUvP8kDMFdfoFXY0G3qHeDx9VMLPIvf6ksHt641FAVoYKG5q8cmGuus3ecuLKG9hgVs=,iv:gC8YXgisczEVwIgncRUpAYo9ZXywCrgj5cYr8eFv9xo=,tag:jCbxgq3leD0q4yNPORacLQ==,type:str]
+    lastmodified: "2025-11-11T17:46:39Z"
+    mac: ENC[AES256_GCM,data:gFwzoZhrE/Z8O6M48IZIE3rghyzWntYFLYFt+jiKW4qrXGsz/bzBo/ml72eCstDYzvHq2MS9HnaoITkqrgNUQa7eLeD6kwkzjhHauU8NE0wQGV30XkHSNlgkg9vJQcAlRM7m+MwqCuA0Y5HZd7m0VZJKxkyTUTIb6Xb7Qiegqzg=,iv:OVzPRixthB0vlmc2qZbl2GiQrM2KOZCT2IgtVMlaNqM=,tag:ZdEw9lDBRzlxKcymktp81g==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
