(pmm) fix discord webhook url

--- a/cluster/apps/media/plex-meta-manager/config/pmm-secret.sops.yaml
+++ b/cluster/apps/media/plex-meta-manager/config/pmm-secret.sops.yaml
@@ -8,16 +8,16 @@ metadata:
         reflector.v1.k8s.emberstack.com/reflection-auto-enabled: "true"
         reflector.v1.k8s.emberstack.com/reflection-auto-namespaces: media
 stringData:
-    PLEX_TOKEN: ENC[AES256_GCM,data:H1IZy5L47N0Xw4rDnWTuIEvyPnE=,iv:8ejbzov49DvkOQYnj9qg+uxDOvpScS91ldVCi96HmdY=,tag:qjpYIEyRgcBRyF3aiYllWw==,type:str]
-    MDBLIST_API_KEY: ENC[AES256_GCM,data:TPTniIJnxONNJT0HELwUvckk0/J1dilvBQ==,iv:oKPYNcPsGkphZbgPJt/7eEaHqbXcExaRC/S6taGYA4Y=,tag:bSA0VZ8xl66HnGflcML6xA==,type:str]
-    OMDB_API_KEY: ENC[AES256_GCM,data:QCJmiJlXSaQ=,iv:8roARS1GRQGcM52EoDh2MGWrBPKEH14gRUGgBJm4UNM=,tag:ZvaaUlI/pktvazc1hyRPEA==,type:str]
-    TMDB_API_KEY: ENC[AES256_GCM,data:x4adwoULtDOb1Vb5nfoRlL5gACCgrtzwlbcbcwQqyOQ=,iv:A7HaqfPH2oth3mbsPD/g4KAPrvMasOT+cBbJZJpO2ss=,tag:4WpdYiKNSYzKACGwdf7NvA==,type:str]
-    TRAKT_CLIENT_ID: ENC[AES256_GCM,data:p8PpM/aM0t8isC+2DUSjW6yzpcKvsVJ4HQtrb8b2pRkSUn9zSCEAokOik3OM4bEtWTvRmAUaNsA2u6fdz01NJw==,iv:KxBbgEmBenfLGhbBuSIinqaldhxdrXaJ3QMunOo7wtU=,tag:wRaraf1dpL3Y9rmtf0R2tA==,type:str]
-    TRAKT_CLIENT_SECRET: ENC[AES256_GCM,data:apyw+kwJa/yrVv3QMNB43NtcsvzQqMuQWxhAx7OVgDFH3ABiJLXdvh2YDfzKQh9vivGCml3PtAhIJ7hebIULlg==,iv:mIDbmkzHhmdorFRAPWjTrZXtuPLKMeYd5FA9AOWnBmw=,tag:V9ESEiSShRsg+fKUJB4XXA==,type:str]
-    TRAKT_ACCESS_TOKEN: ENC[AES256_GCM,data:AVCKvzXqf9Lc3rOVSKQSZr78rnYBnDXq0QCMHG68rKE+DGCiK2g4sFD7eCtXjoFHVWRoDdsPBK8GEfih4Omt6A==,iv:tJdUKYRYHp8j/3qYbbZWpQQ3NEPVmlILM98VklFJxOw=,tag:sB7urGwCwKfjO4KNiPkr4Q==,type:str]
-    TRAKT_EXPIRES_IN: ENC[AES256_GCM,data:EDF4stTC,iv:9eBPiVjBkW1rthTrHM2kI8AQwrbrNpcBDuLQJG/fEIE=,tag:6e8xz1xY4Gpde1LG2GRq8A==,type:str]
-    TRAKT_REFRESH_TOKEN: ENC[AES256_GCM,data:ClbboV96u2vnW/BhFHTGg2WvCqpBn+hTEPL/Eeg6sUcre5kxrww0E0YWUEpF7q4bkmQSiDfD0c78TrptWaDwNA==,iv:msAH7Ac+iCR4VJMu55hA+o/5DMqrJ9bBuoIc3zrna0w=,tag:YvWxtr6u+HAgr9SvrmFecw==,type:str]
-    DISCORD_WEBHOOK_URL: ENC[AES256_GCM,data:OAIOL0M3Dbuo1HIIxViBOgv+eqLirHBMuH2NH5l+AIcKP5NKhBKWzQyjiLff3Urz7rbXz3pV/ZA+Lzr+Dandh+QspaehL64DT7jFggaA3NiJq/s3lO2BL0tBqOotMkkjILZcd/n2wEWM9NzI0q6ZPUU3kPuyfGWO,iv:L4cTvS+O1FW97WHWgMKbT18Ql7xYqPH4JvLG6GUPJCo=,tag:CIvnyAeIBi1kXbnihb513A==,type:str]
+    PLEX_TOKEN: ENC[AES256_GCM,data:cBhXN8eDjdFsDGeQtfaQvspug88=,iv:H4lGyMTi4mKTKUDbIE5jMWQRi3dqLb6kVdFQ/ILQUE8=,tag:fslWRCqRNbSVMW+mJEIiyQ==,type:str]
+    MDBLIST_API_KEY: ENC[AES256_GCM,data:fE0MkVg0CWMJqz24WGrKqmgm9ItgSfyePQ==,iv:Ns00jgTT7veaU0rMymbyldQhnq5r1Xdk1YWXvG3dD44=,tag:J8AaJMkCqpmGvb0geFOQxg==,type:str]
+    OMDB_API_KEY: ENC[AES256_GCM,data:RaZELWJre0U=,iv:1ENz6fokCeLMwOukqRYIAAigcqqTlyyVxY6mQ6w1XXE=,tag:IFtZN0kfAKyf5GVCewhYOA==,type:str]
+    TMDB_API_KEY: ENC[AES256_GCM,data:W0Z+zAdaPyLioQrTY9iL7xy+sq7U+fE/BUaqDVxKC1Q=,iv:744L/wZqRyI3D6l3JWiAkjJwz5p3AfgQeuZLWWMYcYM=,tag:tbPiEPoQ0COT8PHYf33N6w==,type:str]
+    TRAKT_CLIENT_ID: ENC[AES256_GCM,data:MKJAkznIp2XunoEZvYIpTAs466RVLWWI65VN20qAU4mgLN29a7Le5Kct65vCYA0ZjR8I0qdEalB5zDAlaNSmzA==,iv:KvxI406G/ZLsxs9i+SjWgpCMgl9DD2/d4pox04xDL24=,tag:qOUxZaOeXZ2MnKeEUoYmvQ==,type:str]
+    TRAKT_CLIENT_SECRET: ENC[AES256_GCM,data:4ITlVEmDwyGCKb0NOL7XFLZy+Ie1YoTjrIubeERgIwe0R/qCXFUCAipmw4RRic7gjCn0c5pioxSOpQ/P6ol2Ag==,iv:Fo49iU2WaqsOm97G3NavoW0/9Twy7YEUAnazx8iBeZc=,tag:kO+r8hbWmlGFu2nMesxX/w==,type:str]
+    TRAKT_ACCESS_TOKEN: ENC[AES256_GCM,data:6aQMnL6oIo9y3GRahgeFOD53XRtzht+uJsLSNAF/5S5coUs2s9mzOr/vmgI1Fqrh5K/nd3buOgEW8AD3GmfAkA==,iv:9jXwWr3YZ8oyMLlTbhDHMMZPSvPIk1HVHXVEIqDc7Lc=,tag:yWJvNUeBFQizfVSRrfdLRQ==,type:str]
+    TRAKT_EXPIRES_IN: ENC[AES256_GCM,data:LUu+ETpi,iv:5hk/O6TH39PbkR3EIieeYjPwVTh+2GUUkpruXOts7n8=,tag:fcknLQvY10TPFRh5/B7wqw==,type:str]
+    TRAKT_REFRESH_TOKEN: ENC[AES256_GCM,data:jVqZ/uKBx+Nz5tvrE9WhOXM9QMQIPeLt6qufMp8l6x2E++IVfVaMvvpC58BYVMKyVvE50oikfgF5M0qe0bzs7Q==,iv:sE8CKJyCtj5oMRYLC6i84crDii8msBvo+UZFnupiXzM=,tag:q/aNxnAzS7gtC6okpsjH9w==,type:str]
+    DISCORD_WEBHOOK_URL: ENC[AES256_GCM,data:SPdBvGMtUNj0Fu86HJvqOAl8b6gf2jNgHyjJJvsADwSPJVINMQmckCo4XlJxiqEPExx2PqUr32JQxTpUK5+6bO4n8p8+iBt1uZPIj/X8rBoS7FYkkvuG73+9l2NXVLnDKW0xgPEhgtew0/knpOPULAOzOCFnw37Y+g==,iv:Zihw3KS8ce57yAqB0jCdqcXkRBx0FWSFjM2mJ7Rt020=,tag:ssoqZBA7Qayl6vabswew3A==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -27,23 +27,23 @@ sops:
         - recipient: age1hr5v66mq2rtflw8vrzmdlaku48v0j5l2wr58lrdmxqp5decczugs3rr6yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBDa1dXeWpNVm5zU3hzYnNY
-            R3ZnWFFJcjRVVmE2ZndKY3hZSlN0dUxaZkdZClpPZldUU2ZhdzEwK09JdlJQcFRu
-            QlpPNUgxSHRDQUhKQlgwSGdrMGNtUkkKLS0tIDVrWi9DSXJrSklEV0RjQTRLNGIv
-            ejJsRm8rbWFpdEMwYmh1N2tnSHIzaEUKBmwaMrZkYqkZuxwTX56rnC6uJj/bjJjk
-            NRH7k/JnPLEOf9QbDDHrfHMjWjhI2xAXpKaqc201gflH/KWUO03Mwg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnSzZycHZ2WEU3c2RkZE5E
+            eVZDNXU4RUkxRGhvRUV5VHArU1FtWEZnaHpzCnljNFhzbW5JdnhwSmJ2QzhEbnBY
+            RFYxZ0U2dGI2S1lNTFhCeDRSWkwrMEEKLS0tIFR0TFZKUTZscGhoL1h5NjlqeExJ
+            MGtHVnBoZkhXdjJIWHo5RUdIem91TTAK6auAh/WC8y/Fw1cLoxox+cTf1WL96lzQ
+            WCiyEoWdlA3tfAd3e/KBx3HL67+8A9C0XU7+rQD+A4RirrgaYD3EXQ==
             -----END AGE ENCRYPTED FILE-----
         - recipient: age1rp9r7wvsgy6zcl3j4v7kvnrv29sawvqhlm759j9x6zvs0f9ry4kqtmajrq
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAwUmlRdVJSTkpOY0ZLVnFj
-            VUpYNHlES1lTeE9uYm5tMDNqd2dtWG1OMHprCkxROXIvQ1hsRmFmUjIySnBCRU9D
-            Smh3UnF3VlpZb3d1MVdodGJqZ3JGSFUKLS0tIHVtYjYraHFVOEFQR3RwUW1VeDlr
-            QUFFbEwxcFQvVlZPVzBHbEZ6cEwzVjQKqN3i4EunV+XbLhrmVwO0sGpAHHxvA1Lm
-            hyQDH5Hzko02LXa/LUZ3Z8ZdsWuwxkj4FHJ47oIzeZJistCbqjSacQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBsQlBtWGVZU3hKSVFDTzQx
+            TGphRWliUnJjZ0VXRXhXNnZrNS9KVzg3SXdRCndjTDZPcXRsQ3l2SS9XQUx1d0ds
+            bHN5OUxXZE9vRW1uMHhEZVlZWi9mRjAKLS0tIENFaExvN21QSDJqVVRCRmNEaGhh
+            R1RpWExqRzViQzFYU3RSRThRazJmczQK/N/DxEKM5c7uJY31ulsZmxhD/MsHSSKV
+            RdA/+Pg30DaVW0SvOJAzNZx6iDg6rPAl+Tct1c6VK5ffJNrqav4QXA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-11-11T17:46:39Z"
-    mac: ENC[AES256_GCM,data:gFwzoZhrE/Z8O6M48IZIE3rghyzWntYFLYFt+jiKW4qrXGsz/bzBo/ml72eCstDYzvHq2MS9HnaoITkqrgNUQa7eLeD6kwkzjhHauU8NE0wQGV30XkHSNlgkg9vJQcAlRM7m+MwqCuA0Y5HZd7m0VZJKxkyTUTIb6Xb7Qiegqzg=,iv:OVzPRixthB0vlmc2qZbl2GiQrM2KOZCT2IgtVMlaNqM=,tag:ZdEw9lDBRzlxKcymktp81g==,type:str]
+    lastmodified: "2025-11-11T22:57:23Z"
+    mac: ENC[AES256_GCM,data:u6+x1sLzoFnN6yj7DQT9+WAZaUva2c16r8pwIiO9V1IrgSVBpFTKLZaHzswYis9NQujAzmntkhcBR//qecyqbVZ6OzTuQu1U/MjoV7Kh9zxkMEwhMwC7W6uOVIIjcHtE1IDqlp0uM/yPShGppBDHXiurCWn2zMmSTnn9cUNVnlE=,iv:w/godQVv7vz2rgBAht1dkdLzGaCdo7bLsUF260TSAyc=,tag:jCN5bCWQEnG+nNzFVX4jFw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
