--- a/cluster/apps/media/plex-meta-manager/app/config/config.yaml
+++ b/cluster/apps/media/plex-meta-manager/app/config/config.yaml
@@ -36,8 +36,8 @@ libraries: # This is called out once within the config.yaml file
       - repo: Movies.yaml
       - repo: People.yaml
       - repo: Movies - Trakt (Unplayed) by Magic815.yaml
-      - pmm: basic
-      - pmm: imdb
+      - default: basic
+      - default: imdb
     overlay_files:
       - remove_overlays: false
       - repo: Movies - Overlays - Charts.yaml
@@ -46,6 +46,7 @@ libraries: # This is called out once within the config.yaml file
       - repo: Movies - Overlays - Stand-up.yaml
       - repo: Movies - Overlays - Streaming Services.yaml
       - repo: Movies - Overlays - Studios.yaml
+      - repo: Movies - Continents.yaml
     operations:
       mass_genre_update: imdb
       mass_content_rating_update: [omdb]
@@ -77,6 +78,7 @@ libraries: # This is called out once within the config.yaml file
       - repo: TV Shows - Overlays - Statuses.yaml
       - repo: TV Shows - Overlays - Streaming Services.yaml
       - repo: TV Shows - Overlays - Studios.yaml
+      - repo: TV Shows - Continents.yaml
     minimum_items: 2
     operations:
       mass_genre_update: tmdb
@@ -92,53 +94,55 @@ libraries: # This is called out once within the config.yaml file
         managed: true
 
 settings:
-  cache: true
-  cache_expiration: 60
-  asset_directory: config/assets
-  asset_folders: false
   asset_depth: 0
+  asset_directory: /config/assets
+  asset_folders: false
+  cache_expiration: 60
+  cache: true
+  check_nightly: false
   create_asset_folders: false
-  prioritize_assets: false
-  dimensional_asset_rename: false
-  download_url_assets: true
-  show_missing_season_assets: false
-  show_missing_episode_assets: false
-  show_asset_not_needed: true
-  sync_mode: sync
-  minimum_items: 1
+  custom_repo: https://github.com/h3mmy/bloopysphere/tree/main/cluster/apps/media/plex-meta-manager/app/custom/
   default_collection_order:
   delete_below_minimum: true
   delete_not_scheduled: false
-  run_again_delay: 2
-  missing_only_released: false
-  missing_path: config/missing
-  custom_repo: https://github.com/h3mmy/bloopysphere/tree/main/cluster/apps/media/plex-meta-manager/app/custom/
-  only_filter_missing: false
-  show_unmanaged: false
-  show_filtered: false
-  show_options: false
-  show_missing: false
-  show_missing_assets: false
-  save_report: false
-  tvdb_language: eng
+  dimensional_asset_rename: false
+  download_url_assets: true
   ignore_ids:
   ignore_imdb_ids:
   item_refresh_delay: 0
-  playlist_sync_to_user: all
+  minimum_items: 1
+  missing_only_released: false
+  missing_path: config/missing
+  only_filter_missing: false
   playlist_exclude_user:
-  playlist_report: false
-  verify_ssl: true
-  check_nightly: false
-  show_unconfigured: true
   playlist_exclude_users:
+  playlist_report: false
+  playlist_sync_to_user: all
+  playlist_sync_to_users: all
+  prioritize_assets: false
+  run_again_delay: 2
+  save_report: false
+  show_asset_not_needed: true
+  show_filtered: false
+  show_missing_assets: false
+  show_missing_episode_assets: false
+  show_missing_season_assets: false
+  show_missing: false
+  show_options: false
+  show_unconfigured: true
+  show_unmanaged: false
+  sync_mode: sync
+  tvdb_language: eng
+  verify_ssl: true
 
 plex:
   url: http://plex.media.svc.cluster.local:32400
   token: ${PLEX_TOKEN}
-  timeout: 60
+  timeout: 120
   clean_bundles: true
   empty_trash: false
   optimize: false
+  db_cache: 1024
 
 tmdb: # REQUIRED for the script to run
   apikey: ${TMDB_API_KEY}
