--- a/cluster/apps/kyverno/policies/add-rfc1918-annotations.yaml
+++ b/cluster/apps/kyverno/policies/add-rfc1918-annotations.yaml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://github.com/kyverno/playground/raw/refs/heads/main/frontend/src/schemas/clusterpolicy-kyverno.io-v1.json
 ---
 apiVersion: kyverno.io/v1
 kind: ClusterPolicy
