--- a/cluster/apps/kyverno/ks.yaml
+++ b/cluster/apps/kyverno/ks.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cluster-apps-kyverno
+  name: kyverno-app
   namespace: flux-system
 spec:
   interval: 10m
@@ -16,7 +16,7 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cluster-apps-kyverno-policies
+  name: kyverno-policies
   namespace: flux-system
 spec:
   interval: 10m
@@ -27,7 +27,7 @@ spec:
     name: flux-system
   wait: true
   dependsOn:
-    - name: cluster-apps-kyverno
+    - name: kyverno-app
   postBuild:
     substitute: {}
     substituteFrom:
