--- a/.github/workflows/helm-release-differ.yaml
+++ b/.github/workflows/helm-release-differ.yaml
@@ -59,7 +59,7 @@ jobs:
         run: |
           chmod +x .github/scripts/helm-release-differ.sh
           # diff=
-          .github/scripts/helm-release-differ.sh --source-file "default/${{ matrix.file }}" --target-file "${{ matrix.file }}" --remove-common-labels >> $GITHUB_OUTPUT
+          $(.github/scripts/helm-release-differ.sh --source-file "default/${{ matrix.file }}" --target-file "${{ matrix.file }}" --remove-common-labels) >> $GITHUB_OUTPUT
           # echo "${diff}"
           # diff="${diff//'%'/'%25'}"
           # diff="${diff//$'\n'/'%0A'}"
