--- a/.github/workflows/helm-release-differ.yaml
+++ b/.github/workflows/helm-release-differ.yaml
@@ -58,9 +58,8 @@ jobs:
         id: diff
         run: |
           chmod +x .github/scripts/helm-release-differ.sh
-          # diff=
-          $(.github/scripts/helm-release-differ.sh --source-file "default/${{ matrix.file }}" --target-file "${{ matrix.file }}" --remove-common-labels) >> $GITHUB_OUTPUT
-          # echo "${diff}"
+          diff=$(.github/scripts/helm-release-differ.sh --source-file "default/${{ matrix.file }}" --target-file "${{ matrix.file }}" --remove-common-labels)
+          echo "${diff}" >> $GITHUB_OUTPUT
           # diff="${diff//'%'/'%25'}"
           # diff="${diff//$'\n'/'%0A'}"
           # diff="${diff//$'\r'/'%0D'}"
