--- a/.github/workflows/helm-release-differ.yaml
+++ b/.github/workflows/helm-release-differ.yaml
@@ -59,11 +59,11 @@ jobs:
         run: |
           chmod +x .github/scripts/helm-release-differ.sh
           diff=$(.github/scripts/helm-release-differ.sh --source-file "default/${{ matrix.file }}" --target-file "${{ matrix.file }}" --remove-common-labels)
-          echo "${diff}" >> $GITHUB_OUTPUT
+          echo "${diff}"
           # diff="${diff//'%'/'%25'}"
           # diff="${diff//$'\n'/'%0A'}"
           # diff="${diff//$'\r'/'%0D'}"
-          # echo "diff=$(echo ${diff})" >> $GITHUB_OUTPUT
+          echo "diff=$(echo ${diff})" >> $GITHUB_OUTPUT
       - name: Find Comment
         uses: peter-evans/find-comment@v4
         id: find-comment
