--- a/cluster/apps/default/bloopyboi/config/secrets.sops.yaml
+++ b/cluster/apps/default/bloopyboi/config/secrets.sops.yaml
@@ -5,18 +5,29 @@ metadata:
     namespace: flux-system
 type: Opaque
 stringData:
-    botToken: ENC[AES256_GCM,data:/PLYBqO21oYUuDv1ax74Pu7hTbbNk+jIurYS+lVTtfhdXFMDdDO7J42PAApLUMDDiUyDCGZ7OaB/32E=,iv:UoAfu2HX4Vhvo8JvDTKx1pqhm5jLQdoaiI5eGRV8ZR0=,tag:+L2vDtlX3f9AnbzWm18JzQ==,type:str]
-    appId: ENC[AES256_GCM,data:gEWlAowDzVMTcKIJsDI+Z3ZP,iv:qZHdhy4bibQmYBnID/T4P81CWxJ7rkutv5s6haQIFNI=,tag:9lxe9Pe56/EeB1zwVrdmwg==,type:str]
-    efGuildId: ENC[AES256_GCM,data:LGm+CX6GnKy/YbViFDyZYFQ5,iv:Ki2hVd4g0pwSm7ohibTHefiztBF4CPCdSqWJtwSTpVE=,tag:q8V4Rg6F3ygaRs6trs876A==,type:str]
-    efAnnounce: ENC[AES256_GCM,data:DmK7REWdRE676HsEh/4LQwyJGg==,iv:kXHAjB97f3hvIr64B45UpiEMiAl4l2dwMePzgFUYnFc=,tag:w0JXSw/BhLw2R511yeNMZg==,type:str]
-    efGoblinRoleId: ENC[AES256_GCM,data:8A3wXLMh2aqFG96oICKdhI7LlQ==,iv:7KaCIJccAAUASrxdH3ybAxp28+i9zoJtlxyZeeUTFZQ=,tag:snICD38JSP8iyeLm3QnJhw==,type:str]
-    efPlexGangRoleId: ENC[AES256_GCM,data:hpjmSoQ2qroRGz3XvVrPAhZ0,iv:Fdn3l7mPlTE79313nIFK5c7psOuqYnaDtQa30UEERwk=,tag:4xx9nkHARkmEC50+JubCxw==,type:str]
-    efDevRoleId: ENC[AES256_GCM,data:2Yj3oorYBhHqrxKCtzMFfXHp,iv:GJOMK6TckdEgC/ToktWaC4thC/A+Ib0tY4xO0r1A/jI=,tag:QaGS51XdsyjwezQls7+Pxg==,type:str]
-    efBlissRoleId: ENC[AES256_GCM,data:PB0Camz8Q2wcVGkRX0njftn2,iv:vE2sPpwZNL1eKB44LR0/dzO5R4HI/RF1i69mGQDzzKg=,tag:m7CTEZxbiBojf/JqSUDS1w==,type:str]
-    efRoleSelection: ENC[AES256_GCM,data:BAmJCOoNY3ftscVRc5sfxtjsfw==,iv:WbzRc9RW+fmqRFdP6eDjArvx8Rz3pxiH8daXoTQmw4k=,tag:W2Ry3bd9RNVUo9wdxCeKAQ==,type:str]
-    efNewsRoleId: ENC[AES256_GCM,data:vbL7MTUbguSQTHWsOLZVCymfAw==,iv:HO49WDIl/eWv1TrUne+gJrZBh0E8rZvPEPkemLiGrAo=,tag:O35D8AdFk3rgO700cwZa5g==,type:str]
-    efNewsChannelId: ENC[AES256_GCM,data:nUYvpei4I6++72Hdq04JA0vrsw==,iv:L6Gs3OhO4KD2mZdEdavrLdgkvy16h+aNIHFfQeEaGJQ=,tag:MQTkAuV1YKWENrXx+lHcfg==,type:str]
-    postgresPass: ENC[AES256_GCM,data:OBB7B3UvssUzA9YPoszpsVlD0pPnizh8nAZ193kTSoQdkA==,iv:nrwqrwwRZgpiKOI36XUru4vhfIsTiYLHVHvpTcH8rpY=,tag:8a+jmWh2cQHoQNjGwo5nog==,type:str]
+    botToken: ENC[AES256_GCM,data:QiSkKFfg2yQhtUv61HLvhvwzwaTXAy7PtfcGPhCivrXYGAcagPPiNkjP/1FfuOixMo9du0mjfaxQmlk=,iv:LgrASi211fbhvrUXalJmy8eWmSgT8t5Mx/VNgLZPxx0=,tag:lRuDPMIDx87roFTd+3mIxg==,type:str]
+    appId: ENC[AES256_GCM,data:bTtj2g/bKMKZ/t+rCsdLsYNF,iv:T2pS72hHDEFWo4CHT3VtgmW1a9y+8Yfapg9M5Vb0A/I=,tag:pCFl+aBli0UQ9k6Bvo//Cw==,type:str]
+    discordClientSecret: ENC[AES256_GCM,data:GtqXruUefPpYKNtIJvj/0l9bDc7d5HeaRm8vQ/jlWnc=,iv:1QZ0W79uKE1QwE7l/gPtK3s4ohYBw4cKFBudhCJJsvw=,tag:f6BQ2dpW6FufB0T5czzxyA==,type:str]
+    efGuildId: ENC[AES256_GCM,data:egMvSsGLUMmiJHfKH0bbhVCe,iv:IfwA9yYW24ZMDVSZGva1UZIOwCMG8efmDGUHSAud4Uc=,tag:hzOtA3f/RfKfh+Lp0UZQOA==,type:str]
+    efAnnounce: ENC[AES256_GCM,data:YO6CCSD5FUHH0ssxdxyDOPDf8g==,iv:qzqJ93C60eVX3IplR7xPNvnSKc9WfKjyKpfKDYT4e6I=,tag:bj44fLz0EbeVQK/LKDBgDw==,type:str]
+    efRoleSelection: ENC[AES256_GCM,data:MnUrsCg20Ef8+XKfqpYHcBTNyg==,iv:xtHWeHE3uD90a6dTdYEDzJfL8VWtTsjgMFdafAP3joo=,tag:emmGrIQgtHVYPMesADPXNQ==,type:str]
+    efNewsChannelId: ENC[AES256_GCM,data:YYrcxhWaeCDJuKrTU+Izqib/uA==,iv:w7JmtiSR956r03OwvdvuMggN88/nsxc4vk1UAhaB0vs=,tag:gWSGNeYntCa0K/mDuYdgXA==,type:str]
+    efRulesChannelId: ENC[AES256_GCM,data:pZxRuOAH2JoPOO94nOJ0i1tG,iv:nJVjbiRkqPoLWNFR/UHoKPHv2REryuoG6Bpzi1F0RnA=,tag:2MqBaYSW8XSi/zG+b+zWbA==,type:str]
+    efNsfwCategoryId1: ENC[AES256_GCM,data:LnOSzC8sMHxx9FklD1+9TwnP,iv:eBkheMDNKKW1CgAiObxhum4Y47E2dP/WjFEDcnC7eH8=,tag:i778jj+6r835J8MoN5vLAg==,type:str]
+    efLibraryCategoryId: ENC[AES256_GCM,data:0Qbd3gztEgXaKBFBn7MYcuUyVg==,iv:9yJ5mstXzJzFq9kvKUAnOkzMyVBODz1wyvHZC8ye4wA=,tag:bLl+76MVMEus7QEQVot6og==,type:str]
+    efGardenCategoryId: ENC[AES256_GCM,data:EzRRy/Od2Gkime4+H0fHs71ZqQ==,iv:K+BCfznXvrmU33b2kABAw6aqYXevBaAWctjwrFPnsWU=,tag:J2r7TpgQVrp0C28huMhEXw==,type:str]
+    efGoblinRoleId: ENC[AES256_GCM,data:iEcbeQFpmxrFnJcdqw8cdgYs6A==,iv:98fP6oYSe1IC39v3QY3CSS/hBu49bFVKRvsnnWvMXLs=,tag:pKHunVdHrmW+FbnZKIVdDQ==,type:str]
+    efPlexGangRoleId: ENC[AES256_GCM,data:dq1/3Q/CsJHQkfFXPvn6qXUV,iv:ucSwOCt8a2ehT+1paFvFJkrdgQIWL6ZmeeKFN9cRIJA=,tag:Rb1YrHLWOALvys346LC1OQ==,type:str]
+    efDevRoleId: ENC[AES256_GCM,data:6AZxDjVaLRCdzqi6cBiWRNF0,iv:wFsUr6HCol+jf4GJ8LvkCKDEygEMMHeARFNOuI7vgG4=,tag:TPPWXo3HrydKPjZZJHeRkg==,type:str]
+    efAdminRoleId: ENC[AES256_GCM,data:XVhi701hb3+cxPjh4v3SkHuF,iv:msr3Y896gFasSrmAEGl7wE8rC2OS3Y0b4qibcNEiIko=,tag:EmTX2UM8xUqLcXLPQ53gxg==,type:str]
+    efBlissRoleId: ENC[AES256_GCM,data:h2P79weGyxCR3bhjA1IDwmez,iv:PXaaSgfjm6bW4wcEGKjPHdwU9mg/ucm0FqNdrxn1qUI=,tag:K3iK68esiRh8RhY1rT36/Q==,type:str]
+    efNewsRoleId: ENC[AES256_GCM,data:LLKVoyTQtB3NrzgZRmKUB0+iZQ==,iv:tFT+y04dBPjnZXXq1nBP/RCW9Mt+k6lCTqSqraJUYLg=,tag:sSOPJ5vaM0Con8C1qmpjcQ==,type:str]
+    efModRoleId: ENC[AES256_GCM,data:tHCKXGeU9HqGCsMQryQhWyBj,iv:jdGKhBpnI+vkLWUyPUCat0pJ5OHnBwrFnbgjwXjXu5s=,tag:y+bE9grGuKlY4QIaQ/A75w==,type:str]
+    efScholarRoleId: ENC[AES256_GCM,data:SmEb8lz2s4gF/3aIaDNlMFeAFA==,iv:2DvcZGZltt7NK09ZGzrayRbq75H1b6Pp/b8FJCKXbJM=,tag:YVWOPa0Lr9s74OOyO68/3w==,type:str]
+    efGardenCreatureRoleId: ENC[AES256_GCM,data:P0Mn+Lm2MmgbhE+iREOio+4L5w==,iv:vTMgRT2b87afCyF/rc4/dldLrI0LT41vPly88rkMEwk=,tag:tAihpjJhOvSMPeOA0ET30g==,type:str]
+    efKinkLicRoleId: ENC[AES256_GCM,data:m6RhEsbLodvlS8MS2nh/sgqm,iv:m6z4ijcWLKD6sa9rxt1OjyMUgTDdsefRhVsrQb6zz6I=,tag:TTyu2H8Lp/08qh5GIa3Giw==,type:str]
+    efResponsibleRoleId: ENC[AES256_GCM,data:rQvtBKaKh8giUZRV3iS2NvkZ,iv:/l1M9i1y8Vgf7cjX3XYzXU7oWI9Rvf8ACLMa7L0rMK0=,tag:X4OYF05Q/u+AS5zGAukOIQ==,type:str]
+    postgresPass: ENC[AES256_GCM,data:J8rfFpKzvyc1Uy/J0sX+DLXW+j1VxIkUSjb/8cqYs1PEHA==,iv:OEpFheCoBLJMMHnZBWMjhzck9HpGJdxB3V7Yz9PYwf0=,tag:XNVfwiskZY87bwaQTco3Kw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -26,23 +37,23 @@ sops:
         - recipient: age1hr5v66mq2rtflw8vrzmdlaku48v0j5l2wr58lrdmxqp5decczugs3rr6yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxbFUwM2loNEU4dmI5N2FS
-            NkJabmhHRVpLL29FNzkraUZieDNHTjBTaEhVCkdrb1pCUXZVaU5wVlh3NVdtaEQw
-            dGhvelFzc1F1MFhjVE5MVllZMHhXTmcKLS0tIEhYaC9CckIvNzVwKzVESjUyalRZ
-            NEFYQUlmRjdhaG1pZDFFUHVobnFMZUUK37aCykikkoA5VTsraR/e/t3v9G3j0HJg
-            YVExK8os1aKqr38lUkFl7lIHpvRtBVBpEvDqmWcqazH+Y/agjzz86A==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBOcGRzMU5LbERINndaQXJi
+            SHc1MVJvUU90VG1EU0xUREh2YXJCZWltTkdZClo0a2IrVWtVenJJaDFyUmROMmQ2
+            S2RjU0tVUDFWNzRqRmNYMm5ydDZSRnMKLS0tIHJLWW9FSFVDckdJNGZYSmRYSDcx
+            SnZLZW1IQW5teENZTmJodEc4dmdLek0K2WdljRQmxoqf9MNTjUNYR25mGmRo2IvR
+            tQ63n+oVrzo+eJ5/UHh2c9JX0P3Hbeega4aDi8Vg5n+Bc/J5M1tQmg==
             -----END AGE ENCRYPTED FILE-----
         - recipient: age1rp9r7wvsgy6zcl3j4v7kvnrv29sawvqhlm759j9x6zvs0f9ry4kqtmajrq
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB1bkR3bVdvUDBtV2F3MWF6
-            ZVRBdFZJRE84azlPdm43RXlEMjFPQXJxMFE4CitBcGVKaDhFR29NRkVSMHoySE96
-            ekE1K2JBUkF6aU9MSThjeVl2ODlXbG8KLS0tIGF2ZzBhRmd0RlpDM2NwYkp1Tk0y
-            eVdPdWNhdkV3RTEzMVVqam82dWNBRk0KJ0CroC371RUCZl/H3ZG71IG+EbEUF3Ma
-            sOyGw6jul239d3eGPIxr7dWANIYVrBKZanjyg56RzUZjziLyR3WJnA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBuNjJNSEM1ZGNMUkViNzhy
+            OTVYR2tJL0pRYnBGUDZtUEVzK01GN3Mvb0hjCjBQQ2JJb2V2MkVocEt5YzdwdDRt
+            WElCYzB1d3J4MjFIL3g5ZE9zUDBkWVkKLS0tIE9jL2VabUVyN2EzUWFKc2dWT1Fs
+            WS9JM2RLbTltUzg3TnhSRVBXTGhqRlUKPhDPAc/9MYQMXmI1hGfJw43VIucdm8Hx
+            U9Z58IcEHGVmhQOPhFF/40/JLp7qHB2WCn4tt1caZcwskKVX9RhZuA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-11-10T00:08:49Z"
-    mac: ENC[AES256_GCM,data:CNBsupopvrNqqzPuHR+DXX9/ICX+OO4/GHWrYkRSwbhgHtCo5OnIZWX+PcGjL48SgaA/WQV0vOgoOTh6DbSFM/28AjlaZohhygrolJeB72QLDam+gV1QGHfCEnQ2L5B7iNBmMLLd3OykwWGd2yAzr4YDZHiXOOa6dK63MwMuglY=,iv:zPrRBXCaXIHI5K0lXL/r9nOecMv7lDROi1g/GURahwY=,tag:62ChBJ1pOdDjtwclmhwWsA==,type:str]
+    lastmodified: "2025-11-15T19:27:38Z"
+    mac: ENC[AES256_GCM,data:Zt9GeGc4dh2zE+C/HTdPhwQD/QK9IUuHCdPXd7iWHvYP6ms6OPtIVZNEoDuLMQekYohhuPMZrS5K9TAV92hgZH+St7zW//BG9jxXKaA55ViG4qhgC9NHjEwe22hCEyeq6PWabHdE7y3U8TNwYm5RWi+miBLc0aYeOd4KL6fHa6M=,iv:dCifPwAi7Od7yWtFTZNDDMOIt3nVQ0eQ+rAk0o0kv3Y=,tag:IERt0ROjhWzTVFtHUJuSmQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
