--- a/cluster/apps/default/bloopyboi/app/helm-release.yaml
+++ b/cluster/apps/default/bloopyboi/app/helm-release.yaml
@@ -1,7 +1,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta2
 kind: HelmRelease
 metadata:
-  name: bloopyboi
+  name: &app bloopyboi
   namespace: default
   labels:
     component.bloopysphere-0/aspect: automata
@@ -10,7 +10,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 2.6.0
+      version: 4.4.0
       sourceRef:
         kind: HelmRepository
         name: bjw-s-charts
@@ -19,15 +19,17 @@ spec:
     remediation:
       retries: 4
   upgrade:
+    cleanupOnFail: true
     remediation:
       remediateLastFailure: true
   values:
     controllers:
-      main:
+      *app :
+        type: deployment
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
-          main:
+          app:
             image:
               repository: ghcr.io/h3mmy/bloopyboi
               tag: dev@sha256:f027cde8f30fbc0e8c587b1273f3b02ecfacd0057585ae6fd0c77561868d0c79
@@ -55,16 +57,59 @@ spec:
               #   valueFrom:
               #     fieldRef:
               #       fieldPath: spec.serviceAccountName
+    defaultPodOptions:
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 1000
+        runAsGroup: 100
+        fsGroup: 100
+        fsGroupChangePolicy: OnRootMismatch
 
     service:
-      main:
-        controller: main
+      app:
+        controller: *app
         primary: true
         # externalTrafficPolicy: Local
         ports:
-          http:
+          health:
             port: 3000
+          http:
+            port: &port 8080
 
+    route:
+      app:
+        hostnames: ["{{ .Release.Name }}.${XYZ_DOMAIN}"]
+        parentRefs:
+          - name: traefik
+            namespace: networking
+            sectionName: websecure
+        rules:
+          - backendRefs:
+              - name: *app
+                port: *port
+            matches:
+              - path:
+                  type: PathPrefix
+                  value: /discord/linked-roles
+            filters:
+              - type: ExtensionRef
+                extensionRef:
+                  group: traefik.io
+                  kind: Middleware
+                  name: chain-no-auth
+          - backendRefs:
+              - name: *app
+                port: *port
+            matches:
+              - path:
+                  type: PathPrefix
+                  value: /
+            filters:
+              - type: ExtensionRef
+                extensionRef:
+                  group: traefik.io
+                  kind: Middleware
+                  name: bloopnet-xyz-auth
     persistence:
       config:
         enabled: true
