--- a/cluster/apps/default/bloopyboi/app/helm-release.yaml
+++ b/cluster/apps/default/bloopyboi/app/helm-release.yaml
@@ -1,4 +1,5 @@
-apiVersion: helm.toolkit.fluxcd.io/v2beta2
+---
+apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: &app bloopyboi
