--- a/cluster/apps/default/bloopyboi/app/helm-release.yaml
+++ b/cluster/apps/default/bloopyboi/app/helm-release.yaml
@@ -25,7 +25,7 @@ spec:
       remediateLastFailure: true
   values:
     controllers:
-      *app :
+      bloopyboi:
         type: deployment
         annotations:
           reloader.stakater.com/auto: "true"
