--- a/cluster/apps/default/bloopyboi/ks.yaml
+++ b/cluster/apps/default/bloopyboi/ks.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cluster-apps-bloopyboi-config
+  name: bloopyboi-config
   namespace: flux-system
   labels:
     substitution.flux.home.arpa/enabled: "false"
@@ -26,7 +26,7 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cluster-apps-bloopyboi
+  name: bloopyboi-app
   namespace: flux-system
   labels:
     substitution.flux.home.arpa/enabled: "true"
