--- a/cluster/apps/database/redis/kustomization.yaml
+++ b/cluster/apps/database/redis/kustomization.yaml
@@ -2,6 +2,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - prometheus-rule.yaml
-  - helm-release.yaml
+  # - prometheus-rule.yaml
+  # - helm-release.yaml
   - config-pvc.yaml
