--- a/cluster/apps/media/maintainerr/app/helm-release.yaml
+++ b/cluster/apps/media/maintainerr/app/helm-release.yaml
@@ -47,6 +47,7 @@ spec:
         fsGroupChangePolicy: OnRootMismatch
     service:
       app:
+        controller: "{{ .Release.Name }}" 
         ports:
           http:
             port: &port 6246
