--- a/cluster/apps/media/maintainerr/app/helm-release.yaml
+++ b/cluster/apps/media/maintainerr/app/helm-release.yaml
@@ -74,6 +74,6 @@ spec:
                   name: bloopnet-xyz-auth
     persistence:
       data:
-        existingClaim: "{{ .Release.Name }}-v1"
+        existingClaim: {{ .Release.Name }}-v1
         globalMounts:
           - path: /opt/data
