--- a/cluster/apps/media/recyclarr/config/radarr-hd.yaml
+++ b/cluster/apps/media/recyclarr/config/radarr-hd.yaml
@@ -107,7 +107,7 @@ radarr:
     custom_formats:
       - trash_ids:
           - ff5bc9e8ce91d46c997ca3ac6994d6f8 # UHD FraMeSToR (set to 0, 1 or 3200)
-        quality_profiles:
+        assign_scores_to:
           - name: HD
             score: 1
           - name: SD
@@ -160,15 +160,13 @@ radarr:
           - 7357cf5161efbf8c4d5d0c30b4815ee2 # Obfuscated
           - ae9b7c9ebde1f3bd336a8cbd1ec4c5e5 # No-RlsGroup removed do avoid multiple downloads
           - dc98083864ea246d05a42df0d05f81cc # x265 (720/1080p)
-        quality_profiles:
+        assign_scores_to:
           - name: HD
-            reset_unmatched_scores: true
           - name: SD
-            reset_unmatched_scores: true
 
       - trash_ids:
           - 1c7d7b04b15cc53ea61204bebbcc1ee2 # HQ
-        quality_profiles:
+        assign_scores_to:
           - name: HD
             score: 0
           - name: SD
@@ -177,7 +175,7 @@ radarr:
       - trash_ids:
           - 4b900e171accbfb172729b63323ea8ca # Optional: Multi
           - 923b6abef9b17f937fab56cfcf89e1f1 # Optional: DV (WEBDL) without fallback to HDR, set to manual score 0 or -10000
-        quality_profiles:
+        assign_scores_to:
           - name: HD
             score: 0
           - name: SD
@@ -233,7 +231,7 @@ radarr:
           - cc5e51a9e85a6296ceefe097a77f12f4  # BCORE
           - 2a6039655313bf5dab1e43523b62c374  # MA
           - 16622a6911d1ab5d5b8b713d5b0036d4  # CRiT
-        quality_profiles:
+        assign_scores_to:
           - name: HD
           - name: SD
 
@@ -254,7 +252,7 @@ radarr:
           - c9fd353f8f5f1baf56dc601c4cb29920  # PCOK
           - e36a0ba1bc902b26ee40818a1d59b8bd  # PMTP
           - c2863d2a50c9acad1fb50e53ece60817  # STAN
-        quality_profiles:
+        assign_scores_to:
           - name: UHD
           - name: HD
           - name: SD
