--- a/cluster/apps/media/recyclarr/config/radarr-hd.yaml
+++ b/cluster/apps/media/recyclarr/config/radarr-hd.yaml
@@ -16,19 +16,19 @@ radarr:
     base_url: http://radarr.media.svc.cluster.local:7878
     api_key: !env_var RADARR_API_KEY
 
-    # include:
-    #   # Comment out any of the following includes to disable them
-    #   - template: radarr-quality-definition-movie
-    #   # HD Bluray + WEB
-    #   - template: radarr-quality-profile-hd-bluray-web
-    #   - template: radarr-custom-formats-hd-bluray-web
+    include:
+      # Comment out any of the following includes to disable them
+      - template: radarr-quality-definition-movie
+      # HD Bluray + WEB
+      - template: radarr-quality-profile-hd-bluray-web
+      - template: radarr-custom-formats-hd-bluray-web
 
-    #   - template: radarr-quality-definition-anime
-    #   - template: radarr-quality-profile-anime
-    #   - template: radarr-custom-formats-anime
-    #   # Remuxes + WEB 1080p
-    #   - template: radarr-quality-profile-remux-web-1080p
-    #   - template: radarr-custom-formats-remux-web-1080p
+      - template: radarr-quality-definition-anime
+      - template: radarr-quality-profile-anime
+      - template: radarr-custom-formats-anime
+      # Remuxes + WEB 1080p
+      - template: radarr-quality-profile-remux-web-1080p
+      - template: radarr-custom-formats-remux-web-1080p
 
     # Define Quality Profiles
     quality_profiles:
@@ -37,12 +37,13 @@ radarr:
           enabled: true
         upgrade:
           allowed: true
-          until_quality: Remux-1080p
+          until_quality: Bluray-1080p
           until_score: 10000
         min_format_score: 0
         quality_sort: top
         qualities:
           - name: Remux-1080p
+          - name: Bluray-1080p
           - name: WEB 1080p
             qualities:
               - WEBDL-1080p
@@ -235,28 +236,16 @@ radarr:
           - name: HD
           - name: SD
 
-      # Custom Scoring
       - trash_ids:
-          # Streaming Services
-          - b3b3a6ac74ecbd56bcdbefa4799fb9df  # AMZN
-          - 40e9380490e748672c2522eaaeb692f7  # ATVP
-          - f6ff65b3f4b464a79dcc75950fe20382  # CRAV
-          - 84272245b2988854bfb76a16e60baea5  # DSNP
-          - 509e5f41146e278f9eab1ddaceb34515  # HBO
-          - 5763d1b0ce84aff3b21038eea8e9b8ad  # HMAX
-          - 526d445d4c16214309f0fd2b3be18a89  # Hulu
-          - 6a061313d22e51e0f25b7cd4dc065233  # MAX
-          - 170b1d363bd8516fbf3a3eb05d4faff6  # NF
-          - fbca986396c5e695ef7b2def3c755d01  # OViD
-          - bf7e73dd1d85b12cc527dc619761c840  # Pathe
-          - c9fd353f8f5f1baf56dc601c4cb29920  # PCOK
-          - e36a0ba1bc902b26ee40818a1d59b8bd  # PMTP
-          - c2863d2a50c9acad1fb50e53ece60817  # STAN
+          # Unwanted
+          - b6832f586342ef70d9c128d40c07b872 # Bad Dual Groups
+          - cc444569854e9de0b084ab2b8b1532b2 # Black and White Editions
+          - ae9b7c9ebde1f3bd336a8cbd1ec4c5e5 # No-RlsGroup
+          - 7357cf5161efbf8c4d5d0c30b4815ee2 # Obfuscated
+          - 5c44f52a8714fdd79bb4d98e2673be1f # Retags
+          - f537cf427b64c38c8e36298f657e4828 # Scene
         assign_scores_to:
-          - name: UHD
-          - name: HD
-          - name: SD
-            score: 0
+          - name: HD Bluray + WEB
     # release_profiles:
     #   - trash_ids:
     #       - d428eda85af1df8904b4bbe4fc2f537c # Anime - First release profile
